--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
   "packageManager": "pnpm@10.2.0",
   "dependencies": {
     "@wormhole-foundation/sdk-connect": "^1.5.2",
-    "@wormhole-foundation/sdk-route-ntt": "^0.6.1"
+    "@wormhole-foundation/sdk-definitions-ntt": "^0.6.1",
+    "@wormhole-foundation/sdk-evm": "^1.5.2",
+    "@wormhole-foundation/sdk-evm-ntt": "^0.6.1",
+    "@wormhole-foundation/sdk-route-ntt": "^0.6.1",
+    "ethers": "^6.5.1"
   }
 }
