--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "types": [
             "node"
         ],
+        "target": "ES2020",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "strict": true,
