--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
     "@types/node": "~20.17.17",
+    "dotenv": "^16.4.7",
     "tsup": "~8.3.6",
+    "tsx": "^4.19.2",
     "typescript": "~5.6.3"
   },
   "publishConfig": {
