--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "typescript": "~5.6.3"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "restricted"
   },
   "packageManager": "pnpm@10.2.0",
   "dependencies": {
