--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,7 +39,7 @@ jobs:
             run_install: false
 
       - name: Install dependencies
-        uses: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Cache turbo build setup
         uses: actions/cache@v4
