--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -63,6 +63,7 @@ jobs:
         uses: changesets/action@v1
         with:
           title: "🚀 Version packages"
+          publish: pnpm changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.CHANGESETS_GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.CHANGESETS_NPM_TOKEN }}
