--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "~5.6.3"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "packageManager": "pnpm@10.2.0",
   "dependencies": {
