--- a/package.json
+++ b/package.json
@@ -35,14 +35,16 @@
   },
   "packageManager": "pnpm@10.2.0",
   "dependencies": {
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.0",
     "@wormhole-foundation/sdk": "^1.7.0",
     "@wormhole-foundation/sdk-connect": "^1.7.0",
     "@wormhole-foundation/sdk-definitions-ntt": "^0.7.1",
     "@wormhole-foundation/sdk-evm": "^1.7.0",
     "@wormhole-foundation/sdk-evm-ntt": "^0.7.1",
+    "@wormhole-foundation/sdk-route-ntt": "^0.7.1",
     "@wormhole-foundation/sdk-solana": "^1.7.0",
     "@wormhole-foundation/sdk-solana-ntt": "^0.7.1",
-    "@wormhole-foundation/sdk-route-ntt": "^0.7.1",
     "ethers": "^6.5.1"
   }
 }
