--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
+    "@types/bn.js": "^5.2.0",
     "@types/node": "~20.17.17",
     "tsup": "~8.3.6",
     "typescript": "~5.6.3"
@@ -35,6 +36,7 @@
   },
   "packageManager": "pnpm@10.2.0",
   "dependencies": {
+    "@noble/hashes": "^1.8.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.0",
     "@wormhole-foundation/sdk": "^1.7.0",
@@ -45,6 +47,7 @@
     "@wormhole-foundation/sdk-route-ntt": "^0.7.1",
     "@wormhole-foundation/sdk-solana": "^1.7.0",
     "@wormhole-foundation/sdk-solana-ntt": "^0.7.1",
+    "bn.js": "^5.2.2",
     "ethers": "^6.5.1"
   }
 }
