--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   ],
   "scripts": {
     "build": "$npm_execpath tsup --clean",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test-bridge": "ts-node scripts/bridge.ts"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
