feature - support bridging to/from Solana extensions (PROTO-289) (#28)
* add solana function

* add transfer ix

* add ix

* finish transfer call

* update program ids

* rename file

* move to class and export

* bump sdk

* updates to add custom redeem ix

* create token account if needed

* bump version

* add extra accounts needed

* support passing in outbox item

* bump all versions

* support executor on evm

* clean up routes and fogo

* fix type issue

* support executor on svm

* add bridge script for testing

* update script

* separate fogo extensions

* fix relay costs

* fix encoding

* universal recipient encoding svm

* bump version

* fix executor relay svm

* Apply suggestion from @Daniel-Aaron-Bloom

Co-authored-by: Daniel-Aaron-Bloom <76709210+Daniel-Aaron-Bloom@users.noreply.github.com>

* add return

* bump version

* fix: update EVM transferMLikeToken function interface (#29)

* bump version

* fix (again): evm transferMLikeToken interface update (#30)

* fix: update EVM transferMLikeToken function interface

* fix: uint8array instead of []

* chore: bump version

* fix: transceiver bytes for standard relaying

* update executor entrypoint

* use existing wh object

---------

Co-authored-by: Daniel-Aaron-Bloom <76709210+Daniel-Aaron-Bloom@users.noreply.github.com>
Co-authored-by: Jordan Hall <90539730+Oighty@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@m0-foundation/ntt-sdk-route",
-  "version": "0.0.9",
+  "version": "0.0.21",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -22,11 +22,14 @@
   ],
   "scripts": {
     "build": "$npm_execpath tsup --clean",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test-bridge": "node --env-file=.env -r ts-node/register scripts/bridge.ts"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
+    "@types/bn.js": "^5.2.0",
     "@types/node": "~20.17.17",
+    "ts-node": "^10.9.2",
     "tsup": "~8.3.6",
     "typescript": "~5.6.3"
   },
@@ -35,14 +38,25 @@
   },
   "packageManager": "pnpm@10.2.0",
   "dependencies": {
-    "@wormhole-foundation/sdk": "^1.7.0",
-    "@wormhole-foundation/sdk-connect": "^1.7.0",
-    "@wormhole-foundation/sdk-definitions-ntt": "^0.7.1",
-    "@wormhole-foundation/sdk-evm": "^1.7.0",
-    "@wormhole-foundation/sdk-evm-ntt": "^0.7.1",
-    "@wormhole-foundation/sdk-solana": "^1.7.0",
-    "@wormhole-foundation/sdk-solana-ntt": "^0.7.1",
-    "@wormhole-foundation/sdk-route-ntt": "^0.7.1",
+    "@noble/hashes": "^1.8.0",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.2",
+    "@wormhole-foundation/sdk": "3.4.7",
+    "@wormhole-foundation/sdk-connect": "3.4.7",
+    "@wormhole-foundation/sdk-definitions-ntt": "2.0.5",
+    "@wormhole-foundation/sdk-evm": "3.4.7",
+    "@wormhole-foundation/sdk-evm-ntt": "2.0.5",
+    "@wormhole-foundation/sdk-route-ntt": "2.0.5",
+    "@wormhole-foundation/sdk-solana": "3.4.7",
+    "@wormhole-foundation/sdk-solana-ntt": "2.0.5",
+    "bn.js": "^5.2.2",
     "ethers": "^6.5.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "@wormhole-foundation/sdk": "3.4.7",
+      "@wormhole-foundation/sdk-base": "3.4.7",
+      "@wormhole-foundation/sdk-definitions": "3.4.7"
+    }
   }
 }
