update solana routes

--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
   },
   "packageManager": "pnpm@10.18.3",
   "dependencies": {
+    "@coral-xyz/anchor": "0.31.1",
     "@noble/hashes": "^1.8.0",
     "@solana/spl-token": "^0.4.14",
-    "@solana/web3.js": "^1.98.4",
+    "@solana/web3.js": "^1.95.8",
     "@wormhole-foundation/sdk": "4.9.1",
     "@wormhole-foundation/sdk-connect": "4.9.1",
     "@wormhole-foundation/sdk-definitions-ntt": "4.0.14",
